<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Readone</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>
    <string name="login_name">Login for Readone</string>
    <string name="startb_name">Start to Read A New Book</string>
    <string name="finishb_name">Finish Reading A Book</string>
    <string name="excerpt_name">Excerpt From the Book</string>
    <string name="bname_hint">Title</string>
    <string name="bauthor_hint">Author</string>
    <string name="start_bdate_hint">Date</string>
    <string name="finish_bdate_hint">Date</string>
        <string name="note_date_hint">Date</string>
    <string name="start_bconfirm">Start to Read</string>
    <string name="finish_bconfirm">Tap to Finish</string>
        <string name="excerpt_bconfirm">Add a Note</string>
    <string name="finish_feeling">Write down your feeling after reading</string>
   <string name="excerpt_hint">Make notes while reading</string>
       <string name="page_hint">Page</string>
        <string name="imagedesc1"></string>
    <string-array name="now_bnames">
        <item>book1</item>
        <item>book2</item>
        <item>book3</item>
    </string-array>

    <color name="white">#ffffff</color>

</resources>