<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/repeat_bg"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/excerpt"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_bg"
        android:gravity="top"
        android:hint="@string/excerpt_hint"
        android:paddingEnd="10sp"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        android:paddingStart="10sp"
        android:paddingTop="10sp"
        android:textSize="14sp"
        android:textStyle="normal"
        android:typeface="sans" >
    </EditText>

    <EditText
        android:id="@+id/notepage"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/page_hint"
        android:inputType="number"
        android:paddingEnd="10sp"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        android:paddingStart="10sp"
        android:textStyle="normal"
        android:typeface="sans" 
        android:textSize="14sp">
    </EditText>

    <Spinner
        android:id="@+id/from_bname_spinner"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_bg"
        android:entries="@array/now_bnames"
        android:hint="@string/bname_hint"
        android:paddingEnd="10sp"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        android:paddingStart="10sp"
        android:textStyle="normal"
        android:typeface="sans" 
        android:textSize="14sp"/>
    <EditText
        android:id="@+id/notedate"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/note_date_hint"
        android:paddingEnd="10sp"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        android:paddingStart="10sp"
        android:textStyle="normal"
        android:typeface="sans"
        android:textSize="14sp" >
    </EditText>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/excerptconfirmbutton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/button_round" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/excerpt_bconfirm"
            android:textColor="@color/white"
            android:textStyle="normal"
            android:typeface="sans" />
    </LinearLayout>

</LinearLayout>